fixed so all videos are on the screen. Thought other way was going to have them play sequentially.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,7 @@
 <h1>Pole vault time. Get the popcorn ready.</h1>
 
-<!-- <video controls autoplay>
-  <source src="" type="video/mp4">
-  <source src="" type="video/mp4">
-  <source src="" type="video/mp4">
-</video> -->
+<%=  video_tag("FNS_2011.mp4")%>
 
-<%=  video_tag("FNS_2011.mp4", "Meyo_Invite_Notre_Dame_2011.mp4", "U_of_I.mp4")%>
+<%=  video_tag( "Meyo_Invite_Notre_Dame_2011.mp4")%>
 
-<%=  @hi %>
+<%=  video_tag("U_of_I.mp4")%>
